Fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,10 @@ body {
 
 footer {
     width: 100%;
-    bottom: 0;
     background-color: rgb(239, 253, 255);
     position: fixed;
     text-align: center;
+    bottom: 0;
 }
 
 
@@ -29,15 +29,21 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.25dvh 2.5dvw;
     background-color: #ffffff;
     top: 0;
     left: 0;
     width: 100%;
     height: fit-content;
-    /* border-bottom: #60c5ff 3px solid; */
     border-bottom: rgb(0, 92, 137) 3px solid;
     box-shadow: 0px 0px 20px 0px rgba(36, 86, 107, 0.29);
+    position: fixed;
+}
+
+.nav-bar {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 7dvh;
 }
 
 .nav-brand {
@@ -47,6 +53,7 @@ footer {
     color: rgb(0, 92, 137);
     font-size: 1.5rem;
     text-decoration: none;
+    margin-left: 1.5dvw;
 }
 
 .nav-brand-logo {
@@ -70,7 +77,6 @@ footer {
     display: flex; 
     align-items: center; 
     flex: 1;
-    margin-left: 32px;
 }
 
 .nav-links {
@@ -93,8 +99,9 @@ footer {
 }
 
 .nav-user {
-    right: 20px;
-    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     margin-left: auto;
 }
 
@@ -174,6 +181,7 @@ footer {
     padding: 20px 50px 40px;
     text-align: center;
     border-radius: 45px;
+    box-shadow: 12px 12px 12px rgba(0,0,0,0.1);
 }
 
 .form-box h1 {
